src/test/ui/asm/asm-out-assign-imm.nll.stderr
error[E0384]: cannot assign twice to immutable variable `x`
  --> $DIR/asm-out-assign-imm.rs:24:34
   |
LL |     let x: isize;
   |         - help: make this binding mutable: `mut x`
LL |     x = 1;
   |     ----- first assignment to `x`
...
LL |         asm!("mov $1, $0" : "=r"(x) : "r"(5));
   |                                  ^ cannot assign twice to immutable variable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0384`.
